force-app/main/default/objects/B2B_Survey_Response__c/B2B_Survey_Response__c.object-meta.xml
<CustomObject>
    <label>B2B Survey Response</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>B2B Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>