force-app/main/default/objects/B2B_Survey_Response__c/fields/B2B_Account__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the linkage of customer that has answered the survey.</description>
    <inlineHelpText>This field holds the linkage of customer that has answered the survey.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B2B Survey Responses</relationshipLabel>
    <relationshipName>B2B_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>