force-app/main/default/objects/B2B_Survey_Response__c/fields/B2B_Date_Time_Of_Survey__c.field-meta.xml
<CustomField>
    <fullName>B2B_Date_Time_Of_Survey__c</fullName>
    <description>This field holds the date and time at which the survey was filled.</description>
    <inlineHelpText>This field holds the date and time at which the survey was filled.</inlineHelpText>
    <label>Date Time Of Survey</label>
    <type>DateTime</type>
</CustomField>