force-app/main/default/objects/B2B_Survey_Response__c/fields/B2B_No_Response__c.field-meta.xml
<CustomField>
    <fullName>B2B_No_Response__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>