force-app/main/default/objects/B2B_Survey_Response__c/fields/B2B_Survey__c.field-meta.xml
<CustomField>
    <fullName>B2B_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the linkage of survey which is answered by a customer.</description>
    <inlineHelpText>This field holds the linkage of survey which is answered by a customer.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>B2B_Survey__c</referenceTo>
    <relationshipLabel>B2B Survey Responses</relationshipLabel>
    <relationshipName>B2B_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>