force-app/main/default/objects/B2B_Survey_Response__c/fields/B2B_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Survey_Status__c</fullName>
    <description
    >This field holds the status of the survey whether it is not answered at all or few questions are answered or all questions are answered.</description>
    <inlineHelpText
    >This field holds the status of the survey whether it is not answered at all or few questions are answered or all questions are answered.</inlineHelpText>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>