force-app/main/default/objects/B2B_Survey_Response__c/fields/B2B_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>B2B_Total_Score__c</fullName>
    <description>This field stores the summation of all the related survey response&apos;s associates scores</description>
    <inlineHelpText>This field stores the summation of all the related survey response&apos;s associates scores</inlineHelpText>
    <label>Total Score</label>
    <summarizedField>B2B_Survey_Answer__c.B2B_Associated_Score__c</summarizedField>
    <summaryForeignKey>B2B_Survey_Answer__c.B2B_Survey_Response__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>